CLOSED FIXED233581
Fix Playstation build after r286171
https://bugs.webkit.org/show_bug.cgi?id=233581
Summary Fix Playstation build after r286171
ujwal koneru
Reported 2021-11-29 11:41:29 PST
Playstation build is broken after r286171 due to conflict with function override. https://build.webkit.org/#/builders/65/builds/9628/steps/8/logs/stdio ../../Source/WebCore/platform/posix/SharedBufferPOSIX.cpp:63:25: error: call to non-static member function without an object argument while ((bytesRead = read(fd, buffer.data() + totalBytesRead, bytesToRead - totalBytesRead)) > 0)
Attachments
Patch (1.59 KB, patch)
2021-11-29 13:58 PST, ujwal koneru
no flags
Patch (1.57 KB, patch)
2021-11-30 10:22 PST, ujwal koneru
no flags
Patch (1.57 KB, patch)
2021-11-30 10:39 PST, ujwal koneru
don.olmstead: review+
ews-feeder: commit-queue-
New patch (1.29 KB, patch)
2021-11-30 12:57 PST, ujwal koneru
ross.kirsling: review+
ews-feeder: commit-queue-
Patch for build fix. (1.29 KB, patch)
2021-11-30 15:35 PST, ujwal koneru
no flags
[fast-cq] patch for build fix (1.29 KB, patch)
2021-11-30 15:36 PST, ujwal koneru
no flags
ujwal koneru
Comment 1 2021-11-29 13:58:40 PST
Yoshiaki Jitsukawa
Comment 2 2021-11-29 17:41:02 PST
Comment on attachment 445338 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=445338&action=review > Source/WebCore/platform/posix/SharedBufferPOSIX.cpp:63 > + while ((bytesRead = FileSystem::readFromFile(fd, buffer.data() + totalBytesRead, bytesToRead - totalBytesRead)) > 0) If the intention is to fix the build, why don't we just use ::read()?
ujwal koneru
Comment 3 2021-11-30 10:22:41 PST
ujwal koneru
Comment 4 2021-11-30 10:39:32 PST
EWS
Comment 5 2021-11-30 11:53:19 PST
ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!.
ujwal koneru
Comment 6 2021-11-30 12:57:12 PST
Created attachment 445457 [details] New patch fixed style.
EWS
Comment 7 2021-11-30 15:19:25 PST
/Volumes/Data/worker/Commit-Queue/build/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
ujwal koneru
Comment 8 2021-11-30 15:35:32 PST
Created attachment 445478 [details] Patch for build fix. changed reviewer from nobody to unreviewed.
ujwal koneru
Comment 9 2021-11-30 15:36:28 PST
Created attachment 445479 [details] [fast-cq] patch for build fix
EWS
Comment 10 2021-11-30 15:43:26 PST
Committed r286330 (244689@main): <https://commits.webkit.org/244689@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445479 [details].
Radar WebKit Bug Importer
Comment 11 2021-11-30 15:44:31 PST
Note You need to log in before you can comment on or make changes to this bug.