Fix Playstation build after r286171 https://bugs.webkit.org/show_bug.cgi?id=233581

unreviewed build fix.

Patch by ujwal koneru <ujwal.koneru@sony.com> on 2021-11-30

* platform/posix/SharedBufferPOSIX.cpp:
(WebCore::SharedBuffer::createFromReadingFile):


Canonical link: https://commits.webkit.org/244689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286330 268f45cc-cd09-0410-ab3c-d52691b4dbfc